--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -1,16 +1,26 @@
 name: Trigger Markdown Translation
 
 on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+    paths:
+      - '**.md'
+      - '**.en.md'
+      - '**.ja.md'
+      - '.github/workflows/trigger-translation.yml'
   push:
     branches:
       - main
       - master  
     paths:
       - '**.md'
+      - '**.en.md'
+      - '**.ja.md'
       - '.github/workflows/trigger-translation.yml'
 
 permissions:
   contents: write
+  pull-requests: write
   
 jobs:
   debug-info:
@@ -20,12 +30,10 @@ jobs:
         run: |
           echo "Event Name: ${{ github.event_name }}"
           echo "Ref: ${{ github.ref }}"
-          echo "Before: ${{ github.event.before }}"
-          echo "After: ${{ github.event.after }}"
+          echo "PR Number: ${{ github.event.number }}"
+          echo "Base Branch: ${{ github.base_ref }}"
+          echo "Head Branch: ${{ github.head_ref }}"
           echo "Commit Hash: ${{ github.sha }}"
-          echo "Modified Files: ${{ toJson(github.event.commits[0].modified) }}"
-          echo "Added Files: ${{ toJson(github.event.commits[0].added) }}"
-          echo "Removed Files: ${{ toJson(github.event.commits[0].removed) }}"
 
   check-markdown-changes:
     needs: debug-info
@@ -36,6 +44,9 @@ jobs:
       changed_files: ${{ steps.check.outputs.changed_files }}
       deleted_files: ${{ steps.check.outputs.deleted_files }}
       skip_translation: ${{ steps.check.outputs.skip_translation }}
+      is_pr: ${{ steps.check.outputs.is_pr }}
+      pr_number: ${{ steps.check.outputs.pr_number }}
+      target_branch: ${{ steps.check.outputs.target_branch }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -46,7 +57,7 @@ jobs:
         id: check
         run: |
           # Check if commit message contains [skip-translation]
-          COMMIT_MSG="${{ github.event.head_commit.message }}"
+          COMMIT_MSG="${{ github.event.head_commit.message || github.event.pull_request.title }}"
           if [[ "$COMMIT_MSG" == *"[skip-translation]"* ]]; then
             echo "skip_translation=true" >> $GITHUB_OUTPUT
             echo "has_changes=false" >> $GITHUB_OUTPUT
@@ -55,6 +66,17 @@ jobs:
           fi
           
           echo "skip_translation=false" >> $GITHUB_OUTPUT
+          
+          # Determine if this is a PR event
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "is_pr=true" >> $GITHUB_OUTPUT
+            echo "pr_number=${{ github.event.number }}" >> $GITHUB_OUTPUT
+            echo "target_branch=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+          else
+            echo "is_pr=false" >> $GITHUB_OUTPUT
+            echo "pr_number=" >> $GITHUB_OUTPUT
+            echo "target_branch=" >> $GITHUB_OUTPUT
+          fi
           
           # Check if this is the first commit with the workflow file
           if [[ "${{ github.event_name }}" == "push" && "${{ github.event.before }}" == "0000000000000000000000000000000000000000" ]]; then
@@ -65,17 +87,23 @@ jobs:
             exit 0
           else
             # Get changed files from commits
-            CHANGED_FILES=""
-            for commit in $(git rev-list ${{ github.event.before }}..${{ github.event.after }}); do
-              FILES=$(git diff-tree --no-commit-id --name-only -r $commit | grep -E '\.md$|\.ja\.md$' || true)
-              if [[ -n "$FILES" ]]; then
-                if [[ -n "$CHANGED_FILES" ]]; then
-                  CHANGED_FILES="$CHANGED_FILES,$FILES"
-                else
-                  CHANGED_FILES="$FILES"
+            if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+              # For PR, get files changed in the PR
+              CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD | grep -E '\.md$|\.en\.md$|\.ja\.md$' || true)
+            else
+              # For push, get files changed in the push
+              CHANGED_FILES=""
+              for commit in $(git rev-list ${{ github.event.before }}..${{ github.event.after }}); do
+                FILES=$(git diff-tree --no-commit-id --name-only -r $commit | grep -E '\.md$|\.en\.md$|\.ja\.md$' || true)
+                if [[ -n "$FILES" ]]; then
+                  if [[ -n "$CHANGED_FILES" ]]; then
+                    CHANGED_FILES="$CHANGED_FILES,$FILES"
+                  else
+                    CHANGED_FILES="$FILES"
+                  fi
                 fi
-              fi
-            done
+              done
+            fi
             
             # Remove duplicates and format
             CHANGED_FILES=$(echo "$CHANGED_FILES" | tr ',' '\n' | sort -u | tr '\n' ',' | sed 's/,$//')
@@ -83,7 +111,11 @@ jobs:
             echo "Changed markdown files: $CHANGED_FILES"
             
             # Check for deleted markdown files
-            DELETED_FILES=$(git diff --name-only --diff-filter=D ${{ github.event.before }} ${{ github.event.after }} | grep -E '\.md$|\.ja\.md$' || true)
+            if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+              DELETED_FILES=$(git diff --name-only --diff-filter=D origin/${{ github.base_ref }}...HEAD | grep -E '\.md$|\.en\.md$|\.ja\.md$' || true)
+            else
+              DELETED_FILES=$(git diff --name-only --diff-filter=D ${{ github.event.before }} ${{ github.event.after }} | grep -E '\.md$|\.en\.md$|\.ja\.md$' || true)
+            fi
             DELETED_FILES=$(echo "$DELETED_FILES" | tr '\n' ',' | sed 's/,$//')
             
             echo "Deleted files: $DELETED_FILES"
@@ -110,3 +142,6 @@ jobs:
       changed_files: ${{ needs.check-markdown-changes.outputs.changed_files }}
       deleted_files: ${{ needs.check-markdown-changes.outputs.deleted_files }}
       commit_hash: ${{ github.sha }}
+      is_pr: ${{ needs.check-markdown-changes.outputs.is_pr == 'true' }}
+      pr_number: ${{ needs.check-markdown-changes.outputs.pr_number }}
+      target_branch: ${{ needs.check-markdown-changes.outputs.target_branch }}
