Adds more files for translation and updates references to markdowns which are updated

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -7,12 +7,7 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-    paths-ignore:
-      - '.claude/**'
-      - 'CLAUDE.md'
-      - 'GEMENI.md'
-      - '.cursor/**'
-      - '.cline/**'  
+      - '.github/workflows/trigger-translation.yml'
   push:
     branches:
       - main
@@ -21,12 +16,7 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-    paths-ignore:
-      - '.claude/**'
-      - 'CLAUDE.md'
-      - 'GEMENI.md'
-      - '.cursor/**'
-      - '.cline/**'    
+      - '.github/workflows/trigger-translation.yml'
 
 permissions:
   contents: write
@@ -144,7 +134,7 @@ jobs:
   trigger-markdown-translation:
     needs: check-markdown-changes
     if: needs.check-markdown-changes.outputs.has_changes == 'true' && needs.check-markdown-changes.outputs.skip_translation == 'false'
-    uses: rimoapp/bilingual-github/.github/workflows/translate-markdown.yml@main
+    uses: hrxsrv/bilingual-github/.github/workflows/translate-markdown.yml@main
     secrets:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     with:
@@ -154,4 +144,4 @@ jobs:
       commit_hash: ${{ github.sha }}
       is_pr: ${{ needs.check-markdown-changes.outputs.is_pr == 'true' }}
       pr_number: ${{ needs.check-markdown-changes.outputs.pr_number }}
-      target_branch: ${{ needs.check-markdown-changes.outputs.target_branch }} 
+      target_branch: ${{ needs.check-markdown-changes.outputs.target_branch }}
