Adds more files for translation and updates references to markdowns which are updated

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -8,6 +8,8 @@ on:
       - '**.en.md'
       - '**.ja.md'
     paths-ignore:
+      - 'CLAUDE.md'
+      - 'GEMENI.md' 
   push:
     branches:
       - main
@@ -16,7 +18,9 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-    paths-ignore:   
+    paths-ignore:
+      - 'CLAUDE.md'
+      - 'GEMENI.md''    
 
 permissions:
   contents: write
