Adds more files for translation and updates references to markdowns which are updated

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -7,9 +7,12 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-    paths-ignore:
-      - 'CLAUDE.md'
-      - 'GEMENI.md' 
+      - '!.claude/**'
+      - '!CLAUDE.md'
+      - '!GEMENI.md'
+      - '!.cursor/**'
+      - '!.cline/**' 
+ 
   push:
     branches:
       - main
@@ -18,9 +21,11 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-    paths-ignore:
-      - 'CLAUDE.md'
-      - 'GEMENI.md''    
+      - '!.claude/**'
+      - '!CLAUDE.md'
+      - '!GEMENI.md'
+      - '!.cursor/**'
+      - '!.cline/**'    
 
 permissions:
   contents: write
