--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -7,7 +7,7 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-      - '!.claude/**'
+      - '!.claude/**/*.md'
       - '!CLAUDE.md'
       - '!GEMENI.md'
       - '!.cursor/**'
@@ -21,7 +21,7 @@ on:
       - '**.md'
       - '**.en.md'
       - '**.ja.md'
-      - '!.claude/**'
+      - '!.claude/**/*.md'
       - '!CLAUDE.md'
       - '!GEMENI.md'
       - '!.cursor/**'
