changed pr.en.md to pr.md as it was wrongly changed by the previous version

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -4,28 +4,30 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
-      - '!.claude/**'
-      - '!CLAUDE.md'
-      - '!GEMENI.md'
-      - '!.cursor/**'
-      - '!.cline/**' 
-      - '**.md'
-      - '**.en.md'
-      - '**.ja.md'
+      - '**/*.md'
+      - '**/*.en.md'
+      - '**/*.ja.md'
+    paths-ignore:
+      - '.claude/**'
+      - '.cursor/**'
+      - '.cline/**'
+      - 'CLAUDE.md'
+      - 'GEMENI.md'
  
   push:
     branches:
       - main
       - master  
     paths:
-      - '!.claude/**'
-      - '!CLAUDE.md'
-      - '!GEMENI.md'
-      - '!.cursor/**'
-      - '!.cline/**'    
-      - '**.md'
-      - '**.en.md'
-      - '**.ja.md'
+      - '**/*.md'
+      - '**/*.en.md'
+      - '**/*.ja.md'
+    paths-ignore:
+      - '.claude/**'
+      - '.cursor/**'
+      - '.cline/**'
+      - 'CLAUDE.md'
+      - 'GEMENI.md'
 
 permissions:
   contents: write
