changed pr.en.md to pr.md as it was wrongly changed by the previous version

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -7,12 +7,15 @@ on:
       - '**/*.md'
       - '**/*.en.md'
       - '**/*.ja.md'
-    paths-ignore:
-      - '.claude/**'
-      - '.cursor/**'
-      - '.cline/**'
-      - 'CLAUDE.md'
-      - 'GEMENI.md'
+
+      # Exclude entire directories
+      - '!.claude/**'
+      - '!.cursor/**'
+      - '!.cline/**'
+
+      # Exclude specific files
+      - '!CLAUDE.md'
+      - '!GEMENI.md'
  
   push:
     branches:
@@ -22,13 +25,16 @@ on:
       - '**/*.md'
       - '**/*.en.md'
       - '**/*.ja.md'
-    paths-ignore:
-      - '.claude/**'
-      - '.cursor/**'
-      - '.cline/**'
-      - 'CLAUDE.md'
-      - 'GEMENI.md'
 
+      # Exclude entire directories
+      - '!.claude/**'
+      - '!.cursor/**'
+      - '!.cline/**'
+
+      # Exclude specific files
+      - '!CLAUDE.md'
+      - '!GEMENI.md'
+      
 permissions:
   contents: write
   pull-requests: write
