changed pr.en.md to pr.md as it was wrongly changed by the previous version

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -4,28 +4,39 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
+      # include all markdown variants
+      - '**/*.md'
+      - '**/*.en.md'
+      - '**/*.ja.md'
+    
+      # exclude entire directories
       - '!.claude/**'
+      - '!.cursor/**'
+      - '!.cline/**'
+    
+      # exclude specific files
       - '!CLAUDE.md'
       - '!GEMENI.md'
-      - '!.cursor/**'
-      - '!.cline/**' 
-      - '**.md'
-      - '**.en.md'
-      - '**.ja.md'
+
  
   push:
     branches:
       - main
       - master  
     paths:
+      # include all markdown variants
+      - '**/*.md'
+      - '**/*.en.md'
+      - '**/*.ja.md'
+    
+      # exclude entire directories
       - '!.claude/**'
-      - '!CLAUDE.md'
-      - '!GEMENI.md'
       - '!.cursor/**'
-      - '!.cline/**'    
-      - '**.md'
-      - '**.en.md'
-      - '**.ja.md'
+      - '!.cline/**'
+    
+      # exclude specific files
+      - '!CLAUDE.md'
+      - '!GEMENI.md'    
 
 permissions:
   contents: write
