changed pr.en.md to pr.md as it was wrongly changed by the previous version

--- a/.github/workflows/trigger-markdown-translation.yaml
+++ b/.github/workflows/trigger-markdown-translation.yaml
@@ -6,14 +6,17 @@ on:
     paths:
       - '**.md'
       - '!.claude/**'
- 
+      - '!CLAUDE.md'
+      - '!GEMINI.md'
   push:
     branches:
       - main
       - master  
     paths:
       - '**.md'
-      - '!.claude/**'   
+      - '!.claude/**'
+      - '!CLAUDE.md'
+      - '!GEMINI.md' 
 
 permissions:
   contents: write
