--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -90,6 +90,8 @@ repos:
     hooks:
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
+        exclude: '^\.github/workflows/'
       - id: end-of-file-fixer
+        exclude: '^\.github/workflows/'
       - id: check-yaml
       - id: check-added-large-files
