--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,78 +1,15 @@
 [tool.poetry]
-name = "gpt-backend"
-version = "0.1.1"
+name = "bilingual"
+version = "0.1.0"
 description = ""
-authors = ["Yuichi Saito <munisystem@gmail.com>"]
-readme = "README.md"
-packages = [{include = "app", from = "."}]
+authors = ["Your Name <harshit@gmail.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
-uvicorn = {extras = ["standard"], version = "^0.21.1"}
-pydantic = "^2.8.2"
-fastapi = "0.109.1"
-openai = "^1.41.0"
-tiktoken = "0.9.0"
-scikit-learn = "^1.2.2"
-llama-index = "0.10.13"
-python-dotenv = "^1.0.0"
-langdetect = "^1.0.9"
-iso639-lang = "^2.1.0"
-opentelemetry-exporter-gcp-trace = "^1.9.0"
-opentelemetry-instrumentation-fastapi = "^0.42b0"
-opentelemetry-instrumentation-requests = "^0.42b0"
-sentry-sdk = {extras = ["fastapi"], version = "^1.25.1"}
-gitpython = "3.1.41"
-psutil = "^5.9.6"
-types-psutil = "^5.9.5.17"
-pytest-asyncio = "^0.21.1"
-types-requests = "2.31.0"
-pillow = "10.3.0"
-types-pillow = "^10.1.0.2"
-rimo-embeddings = { git = "https://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@github.com/rimoapp/rimo-embeddings.git", rev = "v0.2.5" }
-aiohttp = "^3.12.12"
-langchain = "^0.1.7"
-anthropic = "0.49.0"
-litellm = "^1.72.4"
+python = "^3.10"
+pytest = "^7.0.0"
+# Add your other dependencies here
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
-mypy = "1.8.0"
-black = "^24.3.0"
-isort = "^5.12.0"
-pre-commit = "^3.3.3"
-flake8-pyproject = "^1.2.3"
-bandit = {extras = ["toml"], version = "^1.7.5"}
-autoflake = "^2.2.0"
-types-pyyaml = "^6.0.12.12"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-
-[tool.autoflake]
-expand-star-imports = true
-remove-all-unused-imports = true
-remove-duplicate-keys = true
-remove-unused-variables = true
-ignore_init_module_imports = true
-
-[tool.isort]
-profile = "black"
-
-[tool.flake8]
-# E203: whitespace before ':' (conflict with black behaviour)
-# E501: flake8 line length (covered by black)
-# W503: line break before binary operator (conflict with black behaviour)
-ignore = "E203,E501,W503"
-
-[tool.bandit]
-exclude_dirs = ["tests"]
-
-[tool.mypy]
-exclude = '^(\.venv|venv)/'
-
-[tool.pylint.main]
-extension-pkg-allow-list = ["pydantic"]
-disable = ["no-self-argument","no-self-use"]
+pre-commit = "^3.0.0"
+# Add your other dev dependencies here
