--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -27,8 +27,9 @@ jobs:
           poetry install
 
       - name: Run pre-commit
-        run: |
-          poetry run pre-commit run --all-files
+        uses: pre-commit/action@v3.0.0
+        with:
+          extra_args: --all-files
 
       - name: Run tests
         run: |
