--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -27,9 +27,8 @@ jobs:
           poetry install
 
       - name: Run pre-commit
-        uses: pre-commit/action@v3.0.0
-        with:
-          extra_args: --all-files
+        run: |
+          poetry run pre-commit run --all-files
 
       - name: Run tests
         run: |
